--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 :root {
   --cor-de-fundo: #ebecee;
   --branco: #ffffff;
+  --amarelo-destaque: #eb9b00;
+  --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
 }
 body {
   background-color: var(--cor-de-fundo);
