--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 @import url(./styles/header.css);
+@import url(./styles/banner.css);
+@import url(./styles/carrossel.css);
 :root {
   --cor-de-fundo: #ebecee;
   --branco: #ffffff;
   --amarelo-destaque: #eb9b00;
   --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  --font-principal: "Poppins";
+  --azul: #002f52;
 }
 body {
   background-color: var(--cor-de-fundo);
+  font-family: var(--font-principal);
+  font-size: 16px;
+  font-weight: 400;
 }
