--- a/styles/header.css
+++ b/styles/header.css
@@ -27,6 +27,7 @@
   display: none;
   position: absolute;
   top: 100%;
+  width: 60vw;
 }
 
 .container__botao:checked ~ .lista-menu {
@@ -39,10 +40,15 @@
 }
 .lista-menu__titulo {
   color: var(--amarelo-destaque);
-}
-.lista-menu__item {
-  color: var(--azul-degrade);
+  font-weight: 700;
 }
 .lista-menu__link {
-  text-decoration-line: none;
+  background: var(--azul-degrade);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-transform: uppercase;
+}
+.container__botao {
+  display: none;
 }
