--- a/styles/header.css
+++ b/styles/header.css
@@ -27,7 +27,7 @@
   display: none;
   position: absolute;
   top: 100%;
-  width: 60vw;
+  width: 50vw;
 }
 
 .container__botao:checked ~ .lista-menu {
@@ -51,4 +51,51 @@
 }
 .container__botao {
   display: none;
+}
+.container__titulo {
+  display: none;
+}
+.container__imagem-transparente {
+  display: none;
+}
+.opções {
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .container__titulo,
+  .container__titulo--negrito {
+    font-family: var(--font-secundaria);
+    font-size: 30px;
+  }
+  .container__titulo {
+    font-weight: 400;
+    display: block;
+  }
+  .container__titulo--negrito {
+    font-weight: 700;
+  }
+  .opções {
+    display: flex;
+  }
+  .opções__item {
+    padding: 0 1em;
+    text-transform: uppercase;
+  }
+  .opções__link {
+    text-decoration: none;
+    color: var(--preto);
+  }
+  .container__imagem-transparente {
+    display: none;
+  }
+  .cabeçalho__menu_hamburguer {
+    display: none;
+  }
+  .opções__botão:checked ~ .lista-menu {
+    display: block;
+    width: auto;
+  }
+  .opções__botão {
+    display: none;
+  }
 }
