--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
   --azul: #002f52;
   --font-secundaria: "Josefin Sans";
   --preto: #000000;
+  --cinza: #858585;
+  --cinza-escuro: #474646;
 }
 body {
   background-color: var(--cor-de-fundo);
