--- a/styles/contato.css
+++ b/styles/contato.css
@@ -30,3 +30,20 @@
   background: url("../assets/Vector.svg") no-repeat;
   padding-left: 2em;
 }
+@media screen and (min-width: 1024px) {
+  .contato {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .contato__titulo {
+    font-size: 24px;
+  }
+  .contato__descrição {
+    margin-right: 2em;
+    width: 30%;
+  }
+  .contato__email {
+    width: 30%;
+  }
+}
