--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -7,3 +7,36 @@ hr {
   background-color: var(--branco);
   padding: 1em;
 }
+.lista-rodapé {
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .rodapé {
+    display: flex;
+    justify-content: space-between;
+    padding: 4em 2em;
+  }
+  .rodapé__titulo {
+    font-size: 24px;
+  }
+  .lista-rodapé {
+    display: block;
+  }
+  .lista-rodapé__titulo {
+    color: var(--cinza);
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 2em;
+  }
+  .lista-rodapé__item {
+    display: flex;
+    align-items: center;
+    padding: 0.5em;
+    gap: 0.5em;
+  }
+  .lista-rodapé__link {
+    color: var(--cinza-escuro);
+    text-decoration: none;
+    font-size: 14px;
+  }
+}
