--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -24,3 +24,14 @@
   font-size: 14px;
   font-weight: 700;
 }
+@media screen and (min-width: 1024px) {
+  .topicos__titulos {
+    font-size: 24px;
+  }
+  .topicos__link {
+    font-size: 20px;
+  }
+  .topicos__item {
+    margin: 2em 2em;
+  }
+}
