--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -78,3 +78,26 @@
     margin: 2em auto;
   }
 }
+@media screen and (min-width: 1728px) {
+  .carrossel__conteiner {
+    display: flex;
+    margin: 0 20vw 3em 20vw;
+    align-items: center;
+  }
+  .swiper {
+    width: 50%;
+  }
+  .descrição__titulo {
+    font-size: 32px;
+  }
+  .descrição__texto {
+    font-size: 16px;
+  }
+  .descrição {
+    margin-right: 2em;
+  }
+  .card {
+    width: 60%;
+    margin-left: 3em;
+  }
+}
