--- a/styles/header.css
+++ b/styles/header.css
@@ -61,6 +61,10 @@
 .opções {
   display: none;
 }
+.container__texto {
+  display: none;
+}
+
 @media screen and (min-width: 1024px) {
   .container__titulo,
   .container__titulo--negrito {
@@ -97,5 +101,22 @@
   }
   .opções__botão {
     display: none;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .container__link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--preto);
+  }
+  .cabeçalho {
+    padding: 0 2em;
+  }
+  .opções {
+    margin-right: auto;
+  }
+  .container__texto {
+    display: block;
   }
 }
