--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -13,7 +13,7 @@ hr {
 @media screen and (min-width: 1024px) {
   .rodapé {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 4em 2em;
   }
   .rodapé__titulo {
@@ -38,5 +38,14 @@ hr {
     color: var(--cinza-escuro);
     text-decoration: none;
     font-size: 14px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .lista-rodapé {
+    border-left: 1px solid var(--cinza);
+    padding-left: 1em;
+  }
+  .rodapé {
+    padding: 3em 0;
   }
 }
