--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -35,3 +35,11 @@
     margin: 2em 2em;
   }
 }
+@media screen and (min-width: 1728px) {
+  .topicos {
+    padding: 3em 30vw;
+  }
+  .topicos__item {
+    margin: 2em 0.5em;
+  }
+}
