Finalizando Projeto com adição de novos hovers

--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,12 @@
   background-position: center;
   display: inline-block;
 }
-
+.container__botao:checked ~ .container__rotulo > .cabeçalho__menu_hamburguer {
+  background-image: url("../assets/menu_black_24dp\ 1.svg");
+}
+.container__botao:checked ~ .container__rotulo {
+  background: var(--azul-degrade);
+}
 .cabeçalho {
   background-color: var(--branco);
   display: flex;
@@ -101,6 +106,21 @@
   }
   .opções__botão {
     display: none;
+  }
+  .opções__botão:checked ~ .opções__rotulo > .opções__item {
+    background: var(--azul-degrade);
+    color: var(--branco);
+  }
+  .opções__item {
+    padding: 2em 1em;
+  }
+
+  .lista-menu__item:hover {
+    background: var(--azul-degrade);
+  }
+  .lista-menu__item:hover > .lista-menu__link {
+    -webkit-text-fill-color: var(--branco);
+    text-decoration: none;
   }
 }
 @media screen and (min-width: 1728px) {
